Modified html file

--- a/FoodRep/Index.html
+++ b/FoodRep/Index.html
@@ -10,7 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/FoodRep/sidebar.css">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -18,6 +18,18 @@
         <![endif]-->
         <h1> Flexicon Technology Project</h1>
         <p> The project has started</p>
+        <div class="sidecontainer">
+            <ul>
+                <li>Home</li>
+                <li>Menu</li>
+                <li>Event</li>
+                <li>Team</li>
+                <li>Blog</li>
+                <li>Shops</li>
+                <li>Pages</li>
+                <li>Contacts</li>
+            </ul>
+        </div>
         <script src="" async defer></script>
     </body>
 </html>
