--- a/FoodRep/Index.html
+++ b/FoodRep/Index.html
@@ -10,6 +10,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="sidebar.css">
         
     </head>
     <body>
@@ -18,6 +19,37 @@
         <![endif]-->
         <h1> Flexicon Technology Project</h1>
         <p> The project has started</p>
+        <div class="sidecontainer">
+          <nav>
+            <ul>
+                <li><a href="#">Home</a>
+                    <ul>
+                        <li><a href="#">HomePage One</a></li>
+                        <li><a href="#">HomePage Two</a></li>
+                        <li><a href="#">HomePage Three</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Menu</a>
+                    <ul>
+                        <li><a href="#">MenuPage One</a></li>
+                        <li><a href="#">MenuPage Two</a></li>
+                        <li><a href="#">MenuPage Three</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Event</a>
+                    <ul>
+                        <li><a href="#">Event Page</a></li>
+                        <li><a href="#">Event Details</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Team</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Shops</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
          
         <script src="" async defer></script>
     </body>
