24/22 modified project work

--- a/FoodRep/Index.html
+++ b/FoodRep/Index.html
@@ -39,38 +39,38 @@
             </nav>
           </div>
           <div class="slidercontainer">
-
-              <div class="imgcontainer">
-                  <div class="imgpack">
-                      <div class="textcarcontainer">
+              <div class="overlay">
+                  <div class="imgcontainer">
+                      <div class="imgpack">
                         <div class="textcarcontainer">
-                            <h1>Welcome To our Restaurant</h1>  
-                            <h2>Its all about good food and taste</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quas?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                            <button class="textbtn" type="button">Learn More</button>
-                      </div>
-                      <img src="/FoodRep/images/b.jpeg" alt="">
-                      <img src="/FoodRep/images/slideimgsix.jpeg" alt="">
-                      <img src="/FoodRep/images/slideimgthree.jpeg" alt="">
-                  </div>
-                  <div onclick="side_slide_btn(-1)" class="left slide btn">
-                      <span class="fa fa-angle-left"></span>
-                  </div>
-                  <div onclick="side_slide_btn(1)" class="right slide btn">
-                      <span class="fa fa-angle-right"></span>
-                  </div>
-                  <div class="slidepoints">
-                     <ul class="slidepoints">
-                         <li onclick="btn_slide(1)"></li>
-                         <li onclick="btn_slide(2)"></li>
-                         <li onclick="btn_slide(3)"></li>
-                     </ul>
-                  </div>
-              </div>
+                          <div class="textcarcontainer">
+                              <h1>Welcome To our Restaurant</h1>  
+                              <h2>Its all about good food and taste</h1>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quas?</p>
+                              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                              <button class="textbtn" type="button">Learn More</button>
+                        </div>
+                        <img src="/FoodRep/images/b.jpeg" alt="">
+                        <img src="/FoodRep/images/slideimgsix.jpeg" alt="">
+                        <img src="/FoodRep/images/slideimgthree.jpeg" alt="">
+                    </div>
+                    <div onclick="side_slide_btn(-1)" class="left slide btn">
+                        <span class="fa fa-angle-left"></span>
+                    </div>
+                    <div onclick="side_slide_btn(1)" class="right slide btn">
+                        <span class="fa fa-angle-right"></span>
+                    </div>
+                    <div class="slidepoints">
+                       <ul class="slidepoints">
+                           <li onclick="btn_slide(1)"></li>
+                           <li onclick="btn_slide(2)"></li>
+                           <li onclick="btn_slide(3)"></li>
+                       </ul>
+                    </div>
+
+                </div>
           </div>
-    
-          
+        </div>  
         <script src="/FoodRep/script.js" async defer></script>
     </body>
 </html>
